<resources>
    <string name="app_name">Ding Dong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="create_video">Create Video</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="settings">Settings</string>
    <string name="passbook">Passbook</string>
    <string name="add_bio">Add bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="subscription">Subscription</string>
    <string name="banks">Banks</string>
    <string name="folder_creation_problem">folder not created</string>
    <string name="gallery">Gallery</string>
    <string name="filters">Filters</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_back">Follow Back</string>
    <string name="help">Help</string>
    <string name="contact_support">Contact Support</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="what_is_the_issue">What is the issue?</string>
    <string name="help_center">Help Center</string>
    <string name="chat_with_us">Chat with us</string>
</resources>
