<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.profile.view.activity.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGoBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|start"
                android:padding="14dp"
                app:srcCompat="@drawable/ic_dd_back_white" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/lhReportAProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_a_problem"
                    android:textColor="@color/colorTextTitle"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:layout_weight="1"
                    android:textSize="16sp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lhContactSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_support"
                    android:textColor="@color/colorTextTitle"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:layout_weight="1"
                    android:textSize="16sp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>