<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lvMain"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@drawable/bg_nav_end_gradient">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lvHome"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home"
                    app:srcCompat="@drawable/ic_dd_home_inactive" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvDiscover"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivDiscover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/discover"
                    app:srcCompat="@drawable/ic_dd_discover_inactive" />

                <TextView
                    android:id="@+id/tvDiscover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/discover"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/progressUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_marginBottom="8dp">

                <ProgressBar
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@drawable/progress"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivVideoCover"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:src="@drawable/emma"/>

            </FrameLayout>

            <ImageView
                android:id="@+id/ivCreate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:visibility="visible"
                android:contentDescription="@string/create_video" />


            <LinearLayout
                android:id="@+id/lvNotification"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/notification"
                    app:srcCompat="@drawable/ic_dd_notification_inactive" />

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/notification"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvProfile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile"
                    app:srcCompat="@drawable/ic_dd_profile_inactive" />

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>