<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.profile.view.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGoBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|start"
                android:padding="14dp"
                app:srcCompat="@drawable/ic_dd_back_white" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lhPassbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/passbook"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Coin balance, payouts, manage banks"/>

                </LinearLayout>



                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lhSubscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/subscription"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Buy &amp; Manage subscriptions"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="Referral Program"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Earn more with our referral program"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextTitle"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/notification"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDarkV2"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:layout_weight="1"
                    android:text="Turn on or off your notifications"/>

            </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="Account"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Request profile verification, manage links"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lhSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="Security"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Change password, login activity, 2F auth"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lhTAndC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:text="Terms &amp; Conditions"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:text="Company terms and conditions"
                        android:textColor="@color/colorPrimaryDarkV2" />

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lhHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="Help"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDarkV2"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="Report problems, contact support"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_arrow_right"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lhLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextTitle"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/logout"/>

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/ic_dd_logout_white"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>